--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-intl": "^2.8.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
